--- a/_includes/milestone.html
+++ b/_includes/milestone.html
@@ -20,7 +20,7 @@
                                     <h4 class="subheading">Software Engineering (embedded systems)</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted"> Led a team of 8 volunteers to guide 10 children under 12 year old with special needs to complete physical training and enhanced children's interpersonal communication skills in the recovering center.</p>
+                                    <p class="text-muted"> Led a team of 8 volunteers to guide children with special needs to complete physical training in the recovering center.</p>
                                     <p class="text-muted"> Transferred to SUTD for overseas education opportunity.</p>
                                 </div>
                             </div>
@@ -32,9 +32,10 @@
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>May 2017</h4>
-                                    <h4 class="subheading">Matriculated in SUTD. The freshmore year focused on engineering fundamentals and design thinking.</h4>
+                                    <h4 class="subheading">Matriculated in SUTD as a freshman.</h4>
                                 </div>
                                 <div class="timeline-body">
+                                    <p class="text-muted">The freshmore year focused on engineering fundamentals and design thinking.</p>
                                     <p class="text-muted">Co-curricular activities: Muay Thai, Tennis, Go (weiqi). Represented SUTD in SUniG tennis varsity game.</p>
                                 </div>
                             </div>
@@ -54,7 +55,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="timeline-image">
+                            <div class="timeline-inverted">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -82,7 +83,7 @@
                             </div>
                         </li>
                         <li>
-                            <div class="timeline-image">
+                            <div class="timeline-inverted">
                                 <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -96,7 +97,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="timeline-inverted">
+                        <li class="timeline-image">
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/7.jpg" alt="">
                             </div>
