--- a/_includes/self.html
+++ b/_includes/self.html
@@ -3,7 +3,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Myself</h2>
+                <h2 class="section-heading">About Myself</h2>
                 <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
         </div>
@@ -26,7 +26,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2 text-left">
-                        <p class="large text-muted"> I am a fresh graduate in SUTD and I am specialized in Business Analytics with a minor in AI. I have strong interests in risk management, data analytics and FinTech technologies. </p>
+                        <p class="large text-muted"> I am a fresh graduate from Singapore University of Technology and Design and I am specialized in Business Analytics with a minor in AI. I have strong interests in risk management, data analytics and FinTech technologies. </p>
                     </div>
                 </div>
             </div>
