--- a/_includes/milestone.html
+++ b/_includes/milestone.html
@@ -54,8 +54,8 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
-                            <div class="timeline-inverted">
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
@@ -82,8 +82,8 @@
                                 </div>
                             </div>
                         </li>
-                        <li>
-                            <div class="timeline-inverted">
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
