--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                         <a class="page-scroll" href="#self">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Experience</a>
+                        <a class="page-scroll" href="#experience">Experience</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#milestone">Milestone</a>
