--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,27 +1,84 @@
-<!-- Clients Aside -->
-    <aside class="skills">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/envato.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <a href="#">
-                        <img src="img/logos/creative-market.jpg" class="img-responsive img-centered" alt="">
-                    </a>
-                </div>
+<!-- Skill Sets Section -->
+<section id="skills">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12 text-center">
+                <h2 class="section-heading">Skill Sets</h2>
+                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
         </div>
-    </aside>
+        <div class="row text-center">
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i> -->
+                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/programming.png" alt="">
+                </span>
+                <h4 class="service-heading">Data analytics</h4>
+                <p class="text-muted">
+                    Object-Oriented Programming: Python, R, C#<br>
+                    Databases: SQL(MySQL, SQLite, Presto), NoSQL(MongoDB, Neo4j)<br>
+                    Data visualization: PowerBI(DAX, server), Tableau, d3.js, Excel<br>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-laptop fa-stack-1x fa-inverse"></i> -->
+                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/backend.png" alt="">
+                </span>
+                <h4 class="service-heading">Backend dev</h4>
+                <p class="text-muted">
+                    Distributed File System: Apache Spark(PySpark), Hadoop, MapReduce, GFS<br>
+                    ETL, ELT, multi-threading programming, Apache Airflow<br>
+                    REST API (Flask, Postman), Web-scraping<br>
+                    Testing: Flask Testing
+                    Unix Shell commands<br>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i> -->
+                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/frontend.jpg" alt="">
+                </span>
+                <h4 class="service-heading">Frontend dev</h4>
+                <p class="text-muted">
+                    React.js, d3.js, R shiny, HTML, selenium<br>
+                    Project management: Github, GitKraken, Trello<br>
+                    Software development: agile scrum<br>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i> -->
+                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/ML.svg" alt="">
+                </span>
+                <h4 class="service-heading">ML & AI</h4>
+                <p class="text-muted">
+                    Statistical modelling, time series<br>
+                    ML: classification, clustering, regression, decision trees<br>
+                    Sciki-learn, MLlib, statsmodels<br>
+                    DL: Pytorch, Tensorflow, Keras, Computer vision (GAN, VAE)<br>
+                    RL: policy-evaluation, epsilon greedu, UCB<br>
+                    NLP: OCR, NER, language detection, sentiment analysis, word-embedding<br>
+                    Spacy, NLTK, BERT, RNN(LSTM)<br>
+                </p>
+            </div>
+            <div class="col-md-4">
+                <span class="fa-stack fa-4x">
+                    <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fa fa-lock fa-stack-1x fa-inverse"></i> -->
+                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/finance.png" alt="">
+                </span>
+                <h4 class="service-heading">Finance</h4>
+                <p class="text-muted">
+                    Financial Risk Management, Value At Risk (VaR)<br>
+                    Financial report analysis, corporate finance, economics<br>
+                    Investment products and quantitative valuation models<br>
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
