--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -7,6 +7,7 @@
                 <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
         </div>
+        
         <div class="row text-center">
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
@@ -49,6 +50,8 @@
                     Software development: agile scrum<br>
                 </p>
             </div>
+            
+        <div class="row text-center">
             <div class="col-md-4">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
