fix skills grid

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -9,7 +9,7 @@
         </div>
         
         <div class="row text-center">
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i> -->
@@ -22,7 +22,7 @@
                     Data visualization: PowerBI(DAX, server), Tableau, d3.js, Excel<br>
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-laptop fa-stack-1x fa-inverse"></i> -->
@@ -37,7 +37,7 @@
                     Unix Shell commands<br>
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-lock fa-stack-1x fa-inverse"></i> -->
@@ -50,9 +50,8 @@
                     Software development: agile scrum<br>
                 </p>
             </div>
-            
-        <div class="row text-center">
-            <div class="col-md-4">
+
+            <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-lock fa-stack-1x fa-inverse"></i> -->
@@ -69,7 +68,7 @@
                     Spacy, NLTK, BERT, RNN(LSTM)<br>
                 </p>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-lock fa-stack-1x fa-inverse"></i> -->
