--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -8,7 +8,7 @@
             </div>
         </div>
         
-        <div class="row text-center">
+        <div class="row">
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -41,7 +41,7 @@
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-lock fa-stack-1x fa-inverse"></i> -->
-                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/frontend.jpg" alt="">
+                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/frontend.png" alt="">
                 </span>
                 <h4 class="service-heading">Frontend dev</h4>
                 <p class="text-muted">
@@ -50,7 +50,8 @@
                     Software development: agile scrum<br>
                 </p>
             </div>
-
+        </div>
+        <div class="row">
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
