--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -14,19 +14,22 @@
                         <div class="modal-body">
                             <h2>{{ post.title }}</h2>
                             <hr class="star-primary">
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p>{{ post.description }}</p>
+                            <img src="{{ site.baseurl }}/img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                            <h4 align="center">Problem Statements</h4>
+                            <p>{{ post.problem_statement}}</p>
+                            <h4 align="center">Implementations</h4>
+                            <p>{{ post.implementation}}</p>
                             <ul class="list-inline item-details">
-                                <li>Client:
+                                <!-- <li>Client:
                                     <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
                                     </strong>
-                                </li>
+                                </li> -->
                                 <li>Date:
-                                    <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
+                                    <strong><a>{{ post.project-date }}</a>
                                     </strong>
                                 </li>
-                                <li>Service:
-                                    <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
+                                <li>Key words:
+                                    <strong><a>{{ post.category }}</a>
                                     </strong>
                                 </li>
                             </ul>
