--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -19,6 +19,7 @@
                             <p>{{ post.problem_statement}}</p>
                             <h4 align="center">Implementations</h4>
                             <p>{{ post.implementation}}</p>
+                            <img src="{{ site.baseurl }}/img/portfolio/{{post.img_sample}}" class="img-responsive img-centered" alt="">
                             <ul class="list-inline item-details">
                                 <!-- <li>Client:
                                     <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
