--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -3,7 +3,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Contact me</h2>
-                    <h3 class="section-subheading text-muted">Feel free to reach out for any opportunities.</h3>
+                    <h3 class="section-subheading text-muted">Let's get in touch!.</h3>
                 </div>
             </div>
             <div class="row">
