--- a/_includes/milestone.html
+++ b/_includes/milestone.html
@@ -64,7 +64,7 @@
                                     <h4 class="subheading">Engineering Systems and Design</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Enrolled in the academic pillar ESD with specialization in Business Analytics. Pursued a minor in Artificial Intelligence. Assisted the pillar dean for a research project in aviation data analytics and selected for Open Hourse Showcase.</p>
+                                    <p class="text-muted">Enrolled in the academic pillar ESD with specialization in Business Analytics. Pursued a minor in Artificial Intelligence. Assisted the pillar dean for a research project in aviation data analytics and selected for Open House Showcase.</p>
                                 </div>
                             </div>
                         </li>
