--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -17,7 +17,7 @@
                 </span>
                 <h4 class="service-heading">Data analytics</h4>
                 <p class="text-muted">
-                    Object-Oriented Programming: Python, R, C#<br>
+                    Object-Oriented Programming: Python(numpy, pandas), R, C#<br>
                     Databases: SQL(MySQL, SQLite, Presto), NoSQL(MongoDB, Neo4j)<br>
                     Data visualization: PowerBI(DAX, server), Tableau, d3.js, Excel<br>
                 </p>
