--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -7,7 +7,7 @@
                     <h3 class="section-subheading text-muted">A more detailed portfolio of my previous work/project experiences.</h3>
                 </div>
             </div>
-            <div class="row">
+            <div class="wrapper">
             {% for post in site.posts %}
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
