--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
     {% include experience.html %}
     {% include milestone.html %}
     {% include skills.html %}
+    {% include cca.html %}
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
