--- a/_includes/header.html
+++ b/_includes/header.html
@@ -31,6 +31,9 @@
                         <a class="page-scroll" href="#skills">Skills</a>
                     </li>
                     <li>
+                        <a class="page-scroll" href="#cca">CCA</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                 </ul>
