--- a/_includes/cca.html
+++ b/_includes/cca.html
@@ -1,25 +1,26 @@
-<section id="portfolio">
-    <div class="container portfolio-flex-grid">
-        <div class="row">
-            <div class="col-lg-12 text-center">
-                <h2 class="section-heading">Co-corricular Activities</h2>
-                <h3 class="section-subheading text-muted">Life's full to explore.</h3>
-                <hr class="star-primary">
+<!-- CCA Grid Section -->
+    <section id="cca", class="bg-light-gray">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Co-corricular Activities</h2>
+                    <h3 class="section-subheading text-muted">Life's full to explore.</h3>
+                    <hr class="star-primary">
+                </div>
+            </div>
+            <div class="portfolio-flex-row">
+                {% for post in site.pages %}
+                    <div class="portfolio-flex-item portfolio-item">
+                        <a href="#ccaModal-{{ post.modal-id }}" class="cca-link" data-toggle="modal">
+                            <div class="caption">
+                                <div class="caption-content">
+                                    <i class="fa fa-search-plus fa-3x"></i>
+                                </div>
+                            </div>
+                            <img src="img/cca/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+                        </a>
+                    </div>
+                {% endfor %}
             </div>
         </div>
-        <div class="portfolio-flex-row">
-            {% for post in site.pages %}
-                <div class="portfolio-flex-item portfolio-item">
-                    <a href="#ccaModal-{{ post.modal-id }}" class="cca-link" data-toggle="modal">
-                        <div class="caption">
-                            <div class="caption-content">
-                                <i class="fa fa-search-plus fa-3x"></i>
-                            </div>
-                        </div>
-                        <img src="img/cca/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
-                    </a>
-                </div>
-            {% endfor %}
-        </div>
-    </div>
-</section>
+    </section>
