--- a/_includes/cca.html
+++ b/_includes/cca.html
@@ -8,19 +8,19 @@
                     <hr class="star-primary">
                 </div>
             </div>
-            <div class="portfolio-flex-row">
-                {% for post in site.pages %}
-                    <div class="portfolio-flex-item portfolio-item">
-                        <a href="#ccaModal-{{ post.modal-id }}" class="cca-link" data-toggle="modal">
-                            <div class="caption">
-                                <div class="caption-content">
-                                    <i class="fa fa-search-plus fa-3x"></i>
-                                </div>
+            <div class="row">
+            {% for post in site.pages %}
+                <div class="portfolio-flex-item portfolio-item">
+                    <a href="#ccaModal-{{ post.modal-id }}" class="cca-link" data-toggle="modal">
+                        <div class="caption">
+                            <div class="caption-content">
+                                <i class="fa fa-search-plus fa-3x"></i>
                             </div>
-                            <img src="img/cca/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
-                        </a>
-                    </div>
-                {% endfor %}
+                        </div>
+                        <img src="img/cca/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
+                    </a>
+                </div>
+            {% endfor %}
             </div>
         </div>
     </section>
