--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,11 +11,11 @@
     {% include experience.html %}
     {% include milestone.html %}
     {% include skills.html %}
-    {% include cca.html %}
+    <!-- {% include cca.html %} -->
     {% include contact.html %}
     {% include footer.html %}
     {% include modals.html %}
-    {% include cca_modals.html %}
+    <!-- {% include cca_modals.html %} -->
     {% include js.html %}
 
     </body>
