--- a/_includes/cca_modals.html
+++ b/_includes/cca_modals.html
@@ -33,7 +33,7 @@
                                 </li>
                             {% endif %}
                             {% if post.category %}
-                                <li>Service:
+                                <li>Category:
                                     <strong><a>{{ post.category }}</a>
                                     </strong>
                                 </li>
