--- a/_includes/cca.html
+++ b/_includes/cca.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Co-corricular Activities</h2>
-                    <h3 class="section-subheading text-muted">Life's full to explore.</h3>
+                    <h3 class="section-subheading text-muted">Life is full to explore.</h3>
                     <hr class="star-primary">
                 </div>
             </div>
