--- a/_includes/cca.html
+++ b/_includes/cca.html
@@ -11,7 +11,7 @@
         {% for post in site.posts %}
             {% if post.community %}
             <div class="col-md-3 col-sm-6 grid-item">
-                <a href="#ccaModal{{ post.modal-id }}" class="cca-link" data-toggle="modal">
+                <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                     <div class="portfolio-hover">
                         <div class="portfolio-hover-content">
                             <i class="fa fa-plus fa-3x"></i>
