--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -12,29 +12,51 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>{{ post.title }}</h2>
-                            <hr class="star-primary">
-                            <img src="{{ site.baseurl }}/img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <h4 align="center">Problem Statements</h4>
-                            <p>{{ post.problem_statement}}</p>
-                            <h4 align="center">Implementations</h4>
-                            <p>{{ post.implementation}}</p>
-                            {% if post.img_sample %}<img src="{{ site.baseurl }}/img/portfolio/{{post.img_sample}}" class="img-responsive img-centered" alt="">{% endif %}
-                            {% if post.video %}<iframe width="800" height="600" src="{{post.video}}">{% endif %}</iframe>
-                            <ul class="list-inline item-details">
-                                <!-- <li>Client:
-                                    <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
-                                    </strong>
-                                </li> -->
-                                <li>Date:
-                                    <strong><a>{{ post.project-date }}</a>
-                                    </strong>
-                                </li>
-                                <li>Key words:
-                                    <strong><a>{{ post.category }}</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            {% if post.modal-id <8 %}
+                                <h2>{{ post.title }}</h2>
+                                <hr class="star-primary">
+                                <img src="{{ site.baseurl }}/img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                                <h4 align="center">Problem Statements</h4>
+                                <p>{{ post.problem_statement}}</p>
+                                <h4 align="center">Implementations</h4>
+                                <p>{{ post.implementation}}</p>
+                                {% if post.img_sample %}<img src="{{ site.baseurl }}/img/portfolio/{{post.img_sample}}" class="img-responsive img-centered" alt="">{% endif %}
+                                {% if post.video %}<iframe width="800" height="600" src="{{post.video}}">{% endif %}</iframe>
+                                <ul class="list-inline item-details">
+                                    <!-- <li>Client:
+                                        <strong><a href="http://startbootstrap.com">{{ post.client }}</a>
+                                        </strong>
+                                    </li> -->
+                                    <li>Date:
+                                        <strong><a>{{ post.project-date }}</a>
+                                        </strong>
+                                    </li>
+                                    <li>Key words:
+                                        <strong><a>{{ post.category }}</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                            {% else %}
+                                <h2>{{ post.title }}</h2>
+                                <hr class="star-primary">
+                                {% if post.description %}
+                                    <p>{{ post.description }}</p>
+                                {% endif %}
+                                <!-- {% for i in range(2,post.img_num+1)}
+                                    <img src="img/cca/{{ post.img_prefix }}{{ i }}.jpg" class="img-responsive img-centered" alt="{{ post.alt }}">
+                                {% endfor %} -->
+                                {% if post.video %}<iframe width="800" height="600" src="{{post.video}}">{% endif %}</iframe>
+                                <ul class="list-inline item-details">
+                                    <li>Date:
+                                        <strong><a>{{ post.project-date }}</a>
+                                        </strong>
+                                    </li>
+                                    <li>Community:
+                                        <strong><a>{{ post.community }}</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                            {% endif %}
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
