--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -12,7 +12,27 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            {% if post.modal-id <8 %}
+                            {% if post.community %}
+                                <h2>{{ post.title }}</h2>
+                                <hr class="star-primary">
+                                {% if post.description %}
+                                    <p>{{ post.description }}</p>
+                                {% endif %}
+                                <!-- {% for i in range(2,post.img_num+1)}
+                                    <img src="img/cca/{{ post.img_prefix }}{{ i }}.jpg" class="img-responsive img-centered" alt="{{ post.alt }}">
+                                {% endfor %} -->
+                                {% if post.video %}<iframe width="800" height="600" src="{{post.video}}">{% endif %}</iframe>
+                                <ul class="list-inline item-details">
+                                    <li>Date:
+                                        <strong><a>{{ post.project-date }}</a>
+                                        </strong>
+                                    </li>
+                                    <li>Community:
+                                        <strong><a>{{ post.community }}</a>
+                                        </strong>
+                                    </li>
+                                </ul>
+                            {% else %}
                                 <h2>{{ post.title }}</h2>
                                 <hr class="star-primary">
                                 <img src="{{ site.baseurl }}/img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
@@ -35,27 +55,7 @@
                                         <strong><a>{{ post.category }}</a>
                                         </strong>
                                     </li>
-                                </ul>
-                            {% else %}
-                                <h2>{{ post.title }}</h2>
-                                <hr class="star-primary">
-                                {% if post.description %}
-                                    <p>{{ post.description }}</p>
-                                {% endif %}
-                                <!-- {% for i in range(2,post.img_num+1)}
-                                    <img src="img/cca/{{ post.img_prefix }}{{ i }}.jpg" class="img-responsive img-centered" alt="{{ post.alt }}">
-                                {% endfor %} -->
-                                {% if post.video %}<iframe width="800" height="600" src="{{post.video}}">{% endif %}</iframe>
-                                <ul class="list-inline item-details">
-                                    <li>Date:
-                                        <strong><a>{{ post.project-date }}</a>
-                                        </strong>
-                                    </li>
-                                    <li>Community:
-                                        <strong><a>{{ post.community }}</a>
-                                        </strong>
-                                    </li>
-                                </ul>
+                                </ul> 
                             {% endif %}
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
