--- a/_includes/cca.html
+++ b/_includes/cca.html
@@ -19,10 +19,10 @@
                     </div>
                     <img src="{{ site.baseurl }}/img/cca/{{ post.img }}" class="img-responsive img-centered" alt="">
                 </a>
-                <!-- <div class="portfolio-caption">
+                <div class="portfolio-caption">
                     <h4>{{ post.title }}</h4>
-                    <p class="text-muted">{{ post.subtitle }}</p>
-                </div> -->
+                    <!-- <p class="text-muted">{{ post.subtitle }}</p> -->
+                </div>
             </div>
             {% endif %}
         {% endfor %}
