--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -18,6 +18,7 @@
                                 {% if post.description %}
                                     <p>{{ post.description }}</p>
                                 {% endif %}
+                                <img src="{{ site.baseurl }}/img/cca/{{ post.long_img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
                                 {% if post.video %}<iframe width="800" height="600" src="{{post.video}}">{% endif %}</iframe>
                                 <ul class="list-inline item-details">
                                     <li>Date:
