--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -28,6 +28,7 @@
                                         {% else %}
                                             <strong><a>{{ post.fake_date }}</a>
                                             </strong>
+                                        {% endif %}
                                     </li>
                                     <li>Community:
                                         <strong><a>{{ post.community }}</a>
