--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -9,7 +9,7 @@
             </div>
             <div class="row">
             {% for post in site.posts %}
-                {% if not post.community %}
+                {% if post.implementation %}
                     <div class="col-md-3 col-sm-6 grid-item">
                         <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="portfolio-hover">
