--- a/_includes/header.html
+++ b/_includes/header.html
@@ -49,7 +49,7 @@
             <div class="intro-text">
                 <div class="intro-lead-in">Welcome To Byron's Page!</div>
                 <div class="intro-heading">Pleased To Meet You Virtually</div>
-                <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
+                <a href="#self" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
         </div>
     </header>
