--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -73,7 +73,7 @@
                 <span class="fa-stack fa-4x">
                     <!-- <i class="fa fa-circle fa-stack-2x text-primary"></i>
                     <i class="fa fa-lock fa-stack-1x fa-inverse"></i> -->
-                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/finance.png" alt="">
+                    <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/finance.webp" alt="">
                 </span>
                 <h4 class="service-heading">Finance</h4>
                 <p class="text-muted">
