fix skill, self

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -33,7 +33,7 @@
                     Distributed File System: Apache Spark(PySpark), Hadoop, MapReduce, GFS<br>
                     ETL, ELT, multi-threading programming, Apache Airflow<br>
                     REST API (Flask, Postman), Web-scraping<br>
-                    Testing: Flask Testing
+                    Testing: Flask Testing<br>
                     Unix Shell commands<br>
                 </p>
             </div>
