--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -9,22 +9,28 @@
             </div>
             <div class="row">
             {% for post in site.posts %}
-                {% if post.implementation %}
-                    <div class="col-md-3 col-sm-6 grid-item order-{{ post.modal-id }}">
-                        <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
-                            <div class="portfolio-hover">
-                                <div class="portfolio-hover-content">
-                                    <i class="fa fa-plus fa-3x"></i>
+                {% with ''|center:8 as range %}
+                    {% for _ in range %}
+                        {{ forloop.counter }}
+                        {% if { post.modal-id }}
+                            {% if post.implementation %}
+                                <div class="col-md-3 col-sm-6 grid-item order-{{ post.modal-id }}">
+                                    <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
+                                        <div class="portfolio-hover">
+                                            <div class="portfolio-hover-content">
+                                                <i class="fa fa-plus fa-3x"></i>
+                                            </div>
+                                        </div>
+                                        <img src="{{ site.baseurl }}/img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
+                                    </a>
+                                    <div class="portfolio-caption">
+                                        <h4>{{ post.title }}</h4>
+                                        <p class="text-muted">{{ post.subtitle }}</p>
+                                    </div>
                                 </div>
-                            </div>
-                            <img src="{{ site.baseurl }}/img/portfolio/{{ post.thumbnail }}" class="img-responsive img-centered" alt="">
-                        </a>
-                        <div class="portfolio-caption">
-                            <h4>{{ post.title }}</h4>
-                            <p class="text-muted">{{ post.subtitle }}</p>
-                        </div>
-                    </div>
-                {% endif %}
+                            {% endif %}
+                    {% endfor %}
+                {% endwith %}
             {% endfor %}
             </div>
         </div>
