--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -10,7 +10,7 @@
             <div class="row">
             {% for post in site.posts %}
                 {% if post.implementation %}
-                    <div class="col-lg-3 col-lg-3 grid-item order-{{ post.modal-id }}">
+                    <div class="col-xl-3 col-sm-3 grid-item order-{{ post.modal-id }}">
                         <a href="#portfolioModal{{ post.modal-id }}" class="portfolio-link" data-toggle="modal">
                             <div class="portfolio-hover">
                                 <div class="portfolio-hover-content">
