skills md bold txt

--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -16,11 +16,12 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/programming.png" alt="">
                 </span>
                 <h4 class="service-heading">Data analytics</h4>
-                <p class="text-muted">
-                    Object-Oriented Programming: Python(numpy, pandas), R, C#<br>
-                    Databases: SQL(MySQL, SQLite, Presto), NoSQL(MongoDB, Neo4j)<br>
-                    Data visualization: PowerBI(DAX, server), Tableau, d3.js, Excel<br>
-                </p>
+                <p class="font-weight-bold">Object-Oriented Programming: </p>
+                <p class="text-muted">Python(numpy, pandas), R, C#<br></p>
+                <p class="font-weight-bold">Databases: </p>
+                <p class="text-muted">SQL(MySQL, SQLite, Presto), NoSQL(MongoDB, Neo4j)<br></p>
+                <p class="font-weight-bold">Data visualization: </p>
+                <p class="text-muted">PowerBI(DAX, server), Tableau, d3.js, Excel<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -29,13 +30,12 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/backend.png" alt="">
                 </span>
                 <h4 class="service-heading">Backend dev</h4>
-                <p class="text-muted">
-                    Distributed File System: Apache Spark(PySpark), Hadoop, MapReduce, GFS<br>
-                    ETL, ELT, multi-threading programming, Apache Airflow<br>
-                    REST API (Flask, Postman), Web-scraping<br>
-                    Testing: Flask Testing<br>
-                    Unix Shell commands<br>
-                </p>
+                <p class="font-weight-bold">Distributed File System: </p>
+                <p class="text-muted">Apache Spark(PySpark), Hadoop, MapReduce, GFS, ETL, Unix Shell commands, AWS EMR<br></p>
+                <p class="font-weight-bold">Data extraction: </p>
+                <p class="text-muted">REST API (Flask, Postman), Web-scraping<br></p>
+                <p class="font-weight-bold">Testing: </p>
+                <p class="text-muted">Flask Testing<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -44,11 +44,12 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/frontend.png" alt="">
                 </span>
                 <h4 class="service-heading">Frontend dev</h4>
-                <p class="text-muted">
-                    React.js, d3.js, R shiny, HTML, selenium<br>
-                    Project management: Github, GitKraken, Trello<br>
-                    Software development: agile scrum<br>
-                </p>
+                <p class="font-weight-bold">Programming: </p>
+                <p class="text-muted">React.js, d3.js, R shiny, HTML, selenium<br></p>
+                <p class="font-weight-bold">PM Tools: </p>
+                <p class="text-muted">Github, GitKraken, Trello<br></p>
+                <p class="font-weight-bold">Project Management: </p>
+                <p class="text-muted">Agile principles, Scrum<br></p>
             </div>
         </div>
         <div class="row">
@@ -59,15 +60,16 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/ML.svg" alt="">
                 </span>
                 <h4 class="service-heading">ML & AI</h4>
-                <p class="text-muted">
-                    Statistical modelling, time series<br>
-                    ML: classification, clustering, regression, decision trees<br>
-                    Sciki-learn, MLlib, statsmodels<br>
-                    DL: Pytorch, Tensorflow, Keras, Computer vision (GAN, VAE)<br>
-                    RL: policy-evaluation, epsilon greedu, UCB<br>
-                    NLP: OCR, NER, language detection, sentiment analysis, word-embedding<br>
-                    Spacy, NLTK, BERT, RNN(LSTM)<br>
-                </p>
+                <p class="font-weight-bold">Modelling: </p>
+                <p class="text-muted">Statistical, Time series models<br></p>
+                <p class="font-weight-bold">ML: </p>
+                <p class="text-muted">classification, clustering, regression, decision trees<br>Sciki-learn, MLlib, statsmodels<br></p>
+                <p class="font-weight-bold">DL: </p>
+                <p class="text-muted">Pytorch, Tensorflow, Keras, Computer vision (GAN, VAE)<br></p>
+                <p class="font-weight-bold">NLP: </p>
+                <p class="text-muted">OCR, NER, language detection, sentiment analysis, word-embedding<br>Spacy, NLTK, BERT, RNN(LSTM)<br></p>
+                <p class="font-weight-bold">RL: </p>
+                <p class="text-muted">policy-evaluation, epsilon greedu, UCB<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
