--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading">Skill Sets</h2>
-                <!-- <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3> -->
+                <!-- <h3 class="section-subheading font-weight-normal">Lorem ipsum dolor sit amet consectetur.</h3> -->
             </div>
         </div>
         
@@ -17,11 +17,11 @@
                 </span>
                 <h4 class="service-heading">Data analytics</h4>
                 <p class="font-weight-bold">Object-Oriented Programming: </p>
-                <p class="text-muted">Python(numpy, pandas), R, C#<br></p>
+                <p class="font-weight-normal">Python(numpy, pandas), R, C#<br></p>
                 <p class="font-weight-bold">Databases: </p>
-                <p class="text-muted">SQL(MySQL, SQLite, Presto), NoSQL(MongoDB, Neo4j)<br></p>
+                <p class="font-weight-normal">SQL(MySQL, SQLite, Presto), NoSQL(MongoDB, Neo4j)<br></p>
                 <p class="font-weight-bold">Data visualization: </p>
-                <p class="text-muted">PowerBI(DAX, server), Tableau, d3.js, Excel<br></p>
+                <p class="font-weight-normal">PowerBI(DAX, server), Tableau, d3.js, Excel<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -31,11 +31,11 @@
                 </span>
                 <h4 class="service-heading">Backend dev</h4>
                 <p class="font-weight-bold">Distributed File System: </p>
-                <p class="text-muted">Apache Spark(PySpark), Hadoop, MapReduce, GFS, ETL, Unix Shell commands, AWS EMR<br></p>
+                <p class="font-weight-normal">Apache Spark(PySpark), Hadoop, MapReduce, GFS, Unix Shell commands, AWS EMR<br></p>
                 <p class="font-weight-bold">Data extraction: </p>
-                <p class="text-muted">REST API (Flask, Postman), Web-scraping<br></p>
+                <p class="font-weight-normal">REST API (Flask, Postman), Web-scraping, ETL<br></p>
                 <p class="font-weight-bold">Testing: </p>
-                <p class="text-muted">Flask Testing<br></p>
+                <p class="font-weight-normal">Flask Testing<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -45,11 +45,11 @@
                 </span>
                 <h4 class="service-heading">Frontend dev</h4>
                 <p class="font-weight-bold">Programming: </p>
-                <p class="text-muted">React.js, d3.js, R shiny, HTML, selenium<br></p>
+                <p class="font-weight-normal">React.js, d3.js, R shiny, HTML, selenium<br></p>
                 <p class="font-weight-bold">PM Tools: </p>
-                <p class="text-muted">Github, GitKraken, Trello<br></p>
+                <p class="font-weight-normal">Github, GitKraken, Trello<br></p>
                 <p class="font-weight-bold">Project Management: </p>
-                <p class="text-muted">Agile principles, Scrum<br></p>
+                <p class="font-weight-normal">Agile principles, Scrum<br></p>
             </div>
         </div>
         <div class="row">
@@ -61,15 +61,15 @@
                 </span>
                 <h4 class="service-heading">ML & AI</h4>
                 <p class="font-weight-bold">Modelling: </p>
-                <p class="text-muted">Statistical, Time series models<br></p>
+                <p class="font-weight-normal">Statistical, Time series models<br></p>
                 <p class="font-weight-bold">ML: </p>
-                <p class="text-muted">classification, clustering, regression, decision trees<br>Sciki-learn, MLlib, statsmodels<br></p>
+                <p class="font-weight-normal">classification, clustering, regression, decision trees<br>Sciki-learn, MLlib, statsmodels<br></p>
                 <p class="font-weight-bold">DL: </p>
-                <p class="text-muted">Pytorch, Tensorflow, Keras, Computer vision (GAN, VAE)<br></p>
+                <p class="font-weight-normal">Pytorch, Tensorflow, Keras, Computer vision (GAN, VAE)<br></p>
                 <p class="font-weight-bold">NLP: </p>
-                <p class="text-muted">OCR, NER, language detection, sentiment analysis, word-embedding<br>Spacy, NLTK, BERT, RNN(LSTM)<br></p>
+                <p class="font-weight-normal">OCR, NER, language detection, sentiment analysis, word-embedding<br>Spacy, NLTK, BERT, RNN(LSTM)<br></p>
                 <p class="font-weight-bold">RL: </p>
-                <p class="text-muted">policy-evaluation, epsilon greedu, UCB<br></p>
+                <p class="font-weight-normal">policy-evaluation, epsilon greedu, UCB<br></p>
             </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
                 <span class="fa-stack fa-4x">
@@ -78,7 +78,7 @@
                     <img class="img-circle img-responsive" src="{{ site.baseurl }}/img/skills/finance.webp" alt="">
                 </span>
                 <h4 class="service-heading">Finance</h4>
-                <p class="text-muted">
+                <p class="font-weight-normal">
                     Financial Risk Management, Value At Risk (VaR)<br>
                     Financial report analysis, corporate finance, economics<br>
                     Investment products and quantitative valuation models<br>
